Fixed compile warnings introduced by the patch for bug #29131.